# advent-of-code

./: .gitignore  README.md
2018/rust/aoc01/: Cargo.toml
2019/go/aoc02/: main.go  main_test.go
2019/go/aoc03/: main.go
2019/go/aoc04/: main.go  main_test.go
2019/go/aoc05/: main.go
2019/go/aoc06/: main.go
2019/go/aoc07/: main.go
2019/go/aoc08/: main.go
2019/go/aoc09/: main.go
2019/go/aoc10/: main.go
2019/go/aoc11/: main.go
2019/go/aoc12/: main.go
2019/go/aoc13/: main.go
2019/go/aoc14/: main.go
2019/rust/: Cargo.toml
2019/rust/src/: aoc01.rs
2020/python/: pyproject.toml
2020/python/aoc2020/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  utils.py
2021/clojure/src/: day01.clj  day02.clj  day03.clj  utils.clj
2021/python/: pyproject.toml
2021/python/aoc2021/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  utils.py
2021/rust/: Cargo.toml
2021/rust/src/: aoc01.rs  aoc02.rs  utils.rs
2022/python/: pyproject.toml
2022/python/aoc2022/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  utils.py
2024/clojure/src/: day01.clj  day02.clj  day03.clj  (+1 more)
2024/python/: README.md  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  pyproject.toml  utils.py
2025/python/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  pyproject.toml  utils.py
(+1 files in other folders)
