[tool.poetry]
name = "aoc2020"
version = "0.1.0"
description = ""
authors = ["Jian Yuan Lee <jianyuan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.7.3"
parsy = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
