[tool.poetry]
name = "aoc2020"
version = "0.1.0"
description = ""
authors = ["Jian Yuan Lee <jianyuan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.8.2"
parsy = "^1.4.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.11b1", allow-prereleases = true}
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
