[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Jian Yuan Lee <jianyuan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
more-itertools = "^8.12.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
